i pray to god that fixed the wrap

--- a/main.css
+++ b/main.css
@@ -10,22 +10,52 @@ nav {
     display: flex;
     position: fixed;
     width: 100%;
+    z-index: 2;
 }
 a[href="#frf"] {
    position: relative;
    margin-right: auto;
-   margin-left: 30px; 
-  
+   margin-left: 30px;
 }
 nav a {
     margin-right: 20px;
     text-decoration: none;
     color: white;
-    clear:both;
 }
 a[href="#c"] {
     margin-right: 60px;
 }
-body {
-    clear:both;
+.container {
+    width: 250px;
+    height: 450px;
+    border: solid 2px rgb(218, 170, 14);
+    border-radius: 5px;
+    margin: 0 5px;
+    flex-shrink: 0;
+    float: left;
+}
+.parent {
+    position: relative;
+    top: 100px;
+    display: flex;
+    flex-wrap:wrap;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+h1 {
+    padding: 25px 15px;
+}
+p {
+    padding: 15px;
+}
+button {
+    padding:10px 80px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    color: white;
+    background-color: rgb(218, 170, 14);
+    border-radius: 5px;
+    border: none;
+    font-size: 16px;
 }
